Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4691

HSM operations mostly fail in striped directories

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.7.0
    • Lustre 2.6.0
    • 3
    • 12900

      Most archives fail (depends on MDT index). Successfully released files cannot be restored.

      # export MOUNT_2=y
      # export MDSCOUNT=4
      # llmount.sh
      # for ((i = 0; i < MDSCOUNT; i++)); do
          mdt_name=$(printf 'lustre-MDT%04x' $i)
          lctl conf_param $mdt_name.mdt.hsm_control=enabled
      done
      # mount $HOSTNAME@tcp:/lustre /mnt/lustre-hsm -t lustre -o user_xattr,flock
      # lhsmtool_posix -vvvv --hsm_root=$HSM_ROOT --daemon /mnt/lustre-hsm 2> /tmp/hsm.log
      # lfs mkdir -i0 -c4 /mnt/lustre/d0
      # cd /mnt/lustre/d0
      # echo > f0
      # echo > f1
      # echo > f2
      # echo > f3
      # lfs hsm_archive f0
      # lfs hsm_state f0
      f0: (0x00000001) exists, archive_id:1
      # lfs hsm_release f0
      Cannot send HSM request (use of f0): Operation not permitted
      #  
      # lfs hsm_archive f1
      # lfs hsm_archive f2
      # lfs hsm_archive f3
      # lfs hsm_release f1
      # lfs hsm_release f2
      Cannot send HSM request (use of f2): Operation not permitted
      # lfs hsm_release f3
      Cannot send HSM request (use of f3): Operation not permitted
      # lfs hsm_state *
      f0: (0x00000001) exists, archive_id:1
      f1: (0x0000000d) released exists archived, archive_id:1
      f2: (0x00000001) exists, archive_id:1
      f3: (0x00000001) exists, archive_id:1
      # cat f1
      ^C
      

            wc-triage WC Triage
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: