lustre/include/lustre/lustreapi.h
@@ -271,6 +271,8 @@ extern int llapi_ls(int argc, char *argv[]);
 extern int llapi_fid2path(const char *device, const char *fidstr, char *path,
 			  int pathlen, long long *recno, int *linkno);
 extern int llapi_path2fid(const char *path, lustre_fid *fid);
+extern int llapi_get_mdt_index_by_fid(int fd, const lustre_fid *fid,
+				      int *mdt_index);
 extern int llapi_fd2fid(const int fd, lustre_fid *fid);
 extern int llapi_chomp_string(char *buf);
 
